--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El pasillo objetos</title>
-    <link rel="stylesheet" href="static/styles/style.css" >
+    <link rel="stylesheet" href="static/styles/style.css">
+    <link rel="icon" href="asset/image/icono.ico">
+   
 </head>
 <body class="body">
 
