--- a/index.html
+++ b/index.html
@@ -42,20 +42,90 @@
         </div>
      </nav>
      <main class="d-flex flex-wrap justify-content-between"> 
-        <div class="col-md-4 d1">
-             Contenido 1
+        <div class="col-md-2 d1">
+             
         </div>
-        <div class="col-md-4 d2" >
-            Contenido 2
+        <div class="col-md-8 d2 d-flex centro" >
+            <div class="card card-prod" style=" width: 18rem">
+                <img src="./static/img/chic.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">SET X4 "CHIC"</h5>
+                  <p class="card-text">$2170</p>
+                  <a href="#" class="btn btn-primary">Agregar al carrito</a>
+                </div>
+              </div>
+              <div class="card card-prod" style="width: 18rem;">
+                <img src="./static/img/ona.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">SUJETA CORTINAS X2 "ONA"</h5>
+                  <p class="card-text">$3615</p>
+                  <a href="#" class="btn btn-primary">Agregar al carrito</a>
+                </div>
+              </div>
+              <div class="card card-prod" style="width: 18rem;">
+                <img src="./static/img/aromas.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">FRASCO "FELIZ CUMPLE"</h5>
+                  <p class="card-text">$2640</p>
+                  <a href="#" class="btn btn-primary">Agregar al carrito</a>
+                </div>
+              </div>
+              <div class="card card-prod" style="width: 18rem;">
+                <img src="./static/img/velas.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">AROMATIZADORES "BABY BOOM" </h5>
+                  <p class="card-text">$1350</p>
+                  <a href="#" class="btn btn-primary">Agregar al carrito</a>
+                </div>
+              </div>
+              <div class="card card-prod" style="width: 18rem;">
+                <img src="./static/img/aromita.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">AROMATIZADORES 250cc</h5>
+                  <p class="card-text">$2495</p>
+                  <a href="#" class="btn btn-primary">Agregar al carrito</a>
+                </div>
+              </div>
+              <div class="card card-prod" style="width: 18rem;">
+                <img src="./static/img/cestohome.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">CESTOS C/MANIJA DE CUERO </h5>
+                  <p class="card-text">$5500</p>
+                  <a href="#" class="btn btn-primary">Agregar al carrito</a>
+                </div>
+              </div>
+              <div class="card card-prod" style="width: 18rem;">
+                <img src="./static/img/cestotusor.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">CESTOS TUSOR</h5>
+                  <p class="card-text">$2600</p>
+                  <a href="#" class="btn btn-primary">Agregar al carrito</a>
+                </div>
+              </div>
+              <div class="card card-prod" style="width: 18rem;">
+                <img src="./static/img/individuales.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">INDIVIDUALES X1</h5>
+                  <p class="card-text">$3260 </p>
+                  <a href="#" class="btn btn-primary">Agregar al carrito</a>
+                </div>
+              </div>
+              <div class="card card-prod" style="width: 18rem;">
+                <img src="./static/img/individualhome.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">INDIVIDUALES X1 </h5>
+                  <p class="card-text">$3260 </p>
+                  <a href="#" class="btn btn-primary">Agregar al carrito</a>
+                </div>
+              </div>
         </div>
-        <div class="col-md-4 d3">
-            Contenido 3
+        <div class="col-md-2 d3">
+            
         </div>
      </main>
+     <footer>
 
-    <footer class="footer-shadow">
-
-    </footer>
+     </footer>
 
     <script src="script.js"></script>
 </body>
